kustomize/components/traefik/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
    - hosts:
        - ds-exercise-01.netd.cs.tu-dresden.de
      secretName: vm1-tls-cert
  rules:
    - host: ds-exercise-01.netd.cs.tu-dresden.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---
# ==========================================
# DTM UI (Dedicated Port 30789 HTTPS)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dtm-ui-route
  namespace: default
spec:
  entryPoints:
    - dtmui
  routes:
    - match: Host(`ds-exercise-01.netd.cs.tu-dresden.de`)
      kind: Rule
      services:
        - name: dtm-svc
          port: 36789
  tls:
    secretName: vm1-tls-cert
---
# ==========================================
# Flink Job UI (Dedicated Port 30181 HTTPS)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flink-ui
  namespace: flink
spec:
  entryPoints:
    - flinkui
  routes:
    - match: Host(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: flink-jobmanager
          port: 8081
  tls:
    secretName: vm1-tls-cert
---
# ==========================================
# Inventory and Product Catalog Expose
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: external-grpc-filtered
  namespace: default
spec:
  entryPoints:
    - external-inv-prodcat
  routes:
    - match: >-
        Host(`ds-exercise-01.netd.cs.tu-dresden.de`) && (
        Path(`/hipstershop.InventoryService/GetInventoryProduct`) ||
        Path(`/hipstershop.InventoryService/CreateNewInventoryProduct`) ||
        Path(`/hipstershop.InventoryService/DeleteInventoryProduct`) ||
        Path(`/hipstershop.InventoryService/ChangeInventoryProductStock`)||
        Path(`/hipstershop.InventoryService/XaCommitCreateInventoryProduct`) ||
        Path(`/hipstershop.InventoryService/XaRollbackCreateInventoryProduct`) ||
        Path(`/hipstershop.InventoryService/XaPrepareCreateInventoryProduct`))
      kind: Rule
      services:
        - name: inventoryservice
          port: 50002
          scheme: h2c

    - match: >-
        Host(`ds-exercise-01.netd.cs.tu-dresden.de`) && (
        Path(`/hipstershop.ProductCatalogService/GetProduct`) ||
        Path(`/hipstershop.ProductCatalogService/CreateNewProduct`) ||
        Path(`/hipstershop.ProductCatalogService/DeleteProduct`) ||
        Path(`/hipstershop.ProductCatalogService/XaCommitCreateProduct`) ||
        Path(`/hipstershop.ProductCatalogService/XaRollbackCreateProduct`) ||
        Path(`/hipstershop.ProductCatalogService/XaPrepareCreateProduct`))
      kind: Rule
      services:
        - name: productcatalogservice
          port: 3550
          scheme: h2c
  tls: {}
