kustomize/components/traefik/ingress-tcp.yaml
# ==========================================
# MQTT (TLS Terminated)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: warehouse-mqtt
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: mqtt-broker
          port: 1883
  tls: {}

---
# ==========================================
# LDAP (TLS Terminated)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldap-server
  namespace: default
spec:
  entryPoints:
    - ldap
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: ldap
          port: 3890
  tls: {}

---
# ==========================================
# Auth Service - gRPC
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: authservice-grpc
  namespace: default
spec:
  entryPoints:
    - auth
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: authservice
          port: 50050
  tls: {}
---
# ==========================================
# DTM - gRPC
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dtm-grpc
  namespace: default
spec:
  entryPoints:
    - dtm-grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dtm-svc
          port: 36790
---
# ==========================================
# NAIVE - gRPC (TLS Terminated)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: warehousemanagement-grpc-naive
  namespace: default
spec:
  entryPoints:
    - grpc-naive
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: warehousemanagement-naive
          port: 50001
  tls: {}
---
# ==========================================
# SAGA - gRPC (TLS Terminated)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: warehousemanagement-grpc-saga
  namespace: default
spec:
  entryPoints:
    - grpc-saga
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: warehousemanagement-saga
          port: 50002
  tls: {}
---
# ==========================================
# XA - gRPC (TLS Terminated)
# ==========================================
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: warehousemanagement-grpc-xa
  namespace: default
spec:
  entryPoints:
    - grpc-xa
  routes:
    - match: HostSNI(`ds-exercise-01.netd.cs.tu-dresden.de`)
      services:
        - name: warehousemanagement-xa
          port: 50003
  tls: {}
